# openglrust

./: Cargo.toml
shaders/: fragment.glsl  vertex.glsl
src/: main.rs
src/shaders/: options.glsl
