[package]
name = "openglrust"
version = "0.1.0"
authors = ["WINSDK <nicolasmazzon549@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.115", features = ["derive"] }
bincode = "~1.3.1"
gfx-hal = "=0.6.0"
shaderc = "=0.6.2"
image = "~0.23.9"
winit = "~0.20.0"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.1"
